options (not working)

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,10 @@
     "default_icon": "src/images/icon32.png",
     "default_popup": "src/page_action/page_action.html"
   },
+  "options_ui": {
+    "page": "src/options/options.html",
+    "open_in_tab": false
+  },
   "background": {
     "page": "src/background/background.html"
   },
