move modifier in 'scripts' folder

--- a/manifest.json
+++ b/manifest.json
@@ -13,10 +13,10 @@
     },
     "default_popup": "src/options/options.html"
   },
-  "options_ui": {
-    "page": "src/options/options.html",
-    "open_in_tab": false
-  },
+  // "options_ui": {
+  //   "page": "src/options/options.html",
+  //   "open_in_tab": false
+  // },
   "permissions": [
     // "tab",
     "storage",
@@ -28,7 +28,8 @@
     ],
     "js": [
       "src/main.js",
-      "src/custom_css.js",
+      "src/scripts/custom_css.js",
+      "src/scripts/waypoints.js",
       "src/injector.js"
     ]
   }],
