--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,19 @@
 {
   "name": "Calimoto Enhancer",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Add some welcome changes to Calimoto web Trip Planner",
   "author": "Jack NUMBER",
   "manifest_version": 2,
   "icons": {
     "512": "src/images/icon512.png"
   },
-  "page_action": {
+  "browser_action": {
     "default_icon": {
       "32": "src/images/icon32.png"
     },
     "default_popup": "src/options/options.html"
   },
-  // "options_ui": {
-  //   "page": "src/options/options.html",
-  //   "open_in_tab": false
-  // },
   "permissions": [
-    // "tab",
     "storage",
     "https://calimoto.com/*"
   ],
