--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Calimoto Enhancer",
+  "name": "Calimoto Poweride",
   "version": "1.0.2",
   "description": "Upgrade the Calimoto Tour Planner web experience by adding new features",
   "author": "Jack NUMBER",
